--- a/index.html
+++ b/index.html
@@ -16,248 +16,39 @@
       <div class="twitter-logo">
         <img src="./images/MainPage_06.jpg" alt="" class="s" />
       </div>
+      <div class="searchbar hidden">
+        <input type="text" placeholder="Search Twitter" id="search" />
+        <span
+          ><img src="./images/images/Discover_06.jpg" alt="" srcset=""
+        /></span>
+      </div>
       <div class="star">
-        <img src="./images/MainPage_08.jpg" alt="" class="s" />
+        <img src="./images/MainPage_08.jpg" alt="" class="content-top-img" />
+        <img
+          src="./images/images/Discover_03.jpg"
+          alt=""
+          class="discover-top-img hidden"
+        />
       </div>
     </div>
     <!-- Main-content  -->
-    <div class="main-content">
-      <!-- content -->
-      <div class="content">
-        <div class="content-header">
-          <span><img src="./images/MainPage_13.jpg" alt="" srcset="" /></span>
-          <span class="type">Video games·</span>
-          <a href="#">See more</a>
-        </div>
-        <div class="content-title">
-          <div class="users">
-            <img src="./images/MainPage_16.jpg" alt="" class="s" />
-          </div>
-          <div class="general">
-            <div class="name">Assasin's Creed</div>
-            <span><img src="./images/MainPage_18.jpg" alt="" srcset="" /></span>
-            <a href="#">@ass...· 5/19/22</a>
-            <div class="dots">···</div>
-            <div class="text-content">Time to test your loyalty.</div>
-            <div class="tags">
-              <a href="#">#AssasinsCreed</a>
-            </div>
-            <div class="img-content">
-              <img src="./images/MainPage_23.jpg" alt="" srcset="" />
-            </div>
-            <div class="comment">
-              <span class="comments">
-                <img src="./images/MainPage_25.jpg" alt="" srcset="" />
-              </span>
-              <span class="text">1,063</span>
-              <span class="retwitter">
-                <img src="./images/MainPage_27.jpg" alt="" srcset="" />
-              </span>
-              <span class="text">2,782</span>
-              <span class="like">
-                <img src="./images/MainPage_27.jpg" alt="" srcset="" />
-              </span>
-              <span class="text">2,782</span>
-              <span class="share">
-                <img src="./images/MainPage_31.jpg" alt="" srcset="" />
-              </span>
-              <span class="text">2,782</span>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- content -->
-      <div class="content">
-        <div class="content-header">
-          <span><img src="./images/MainPage_13.jpg" alt="" srcset="" /></span>
-          <span class="type">Video games·</span>
-          <a href="#">See more</a>
-        </div>
-        <div class="content-title">
-          <div class="users">
-            <img src="./images/MainPage_16.jpg" alt="" class="s" />
-          </div>
-          <div class="general">
-            <div class="name">Assasin's Creed</div>
-            <span><img src="./images/MainPage_18.jpg" alt="" srcset="" /></span>
-            <a href="#">@ass...· 5/19/22</a>
-            <div class="dots">···</div>
-            <div class="text-content">Time to test your loyalty.</div>
-            <div class="tags">
-              <a href="#">#AssasinsCreed</a>
-            </div>
-            <div class="img-content">
-              <img src="./images/MainPage_23.jpg" alt="" srcset="" />
-            </div>
-            <div class="comment">
-              <span class="comments">
-                <img src="./images/MainPage_25.jpg" alt="" srcset="" />
-              </span>
-              <span class="text">1,063</span>
-              <span class="retwitter">
-                <img src="./images/MainPage_27.jpg" alt="" srcset="" />
-              </span>
-              <span class="text">2,782</span>
-              <span class="like">
-                <img src="./images/MainPage_27.jpg" alt="" srcset="" />
-              </span>
-              <span class="text">2,782</span>
-              <span class="share">
-                <img src="./images/MainPage_31.jpg" alt="" srcset="" />
-              </span>
-              <span class="text">2,782</span>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- content -->
-      <div class="content">
-        <div class="content-header">
-          <span><img src="./images/MainPage_13.jpg" alt="" srcset="" /></span>
-          <span class="type">Video games·</span>
-          <a href="#">See more</a>
-        </div>
-        <div class="content-title">
-          <div class="users">
-            <img src="./images/MainPage_16.jpg" alt="" class="s" />
-          </div>
-          <div class="general">
-            <div class="name">Assasin's Creed</div>
-            <span><img src="./images/MainPage_18.jpg" alt="" srcset="" /></span>
-            <a href="#">@ass...· 5/19/22</a>
-            <div class="dots">···</div>
-            <div class="text-content">Time to test your loyalty.</div>
-            <div class="tags">
-              <a href="#">#AssasinsCreed</a>
-            </div>
-            <div class="img-content">
-              <img src="./images/MainPage_23.jpg" alt="" srcset="" />
-            </div>
-            <div class="comment">
-              <span class="comments">
-                <img src="./images/MainPage_25.jpg" alt="" srcset="" />
-              </span>
-              <span class="text">1,063</span>
-              <span class="retwitter">
-                <img src="./images/MainPage_27.jpg" alt="" srcset="" />
-              </span>
-              <span class="text">2,782</span>
-              <span class="like">
-                <img src="./images/MainPage_27.jpg" alt="" srcset="" />
-              </span>
-              <span class="text">2,782</span>
-              <span class="share">
-                <img src="./images/MainPage_31.jpg" alt="" srcset="" />
-              </span>
-              <span class="text">2,782</span>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- content -->
-      <div class="content">
-        <div class="content-header">
-          <span><img src="./images/MainPage_13.jpg" alt="" srcset="" /></span>
-          <span class="type">Video games·</span>
-          <a href="#">See more</a>
-        </div>
-        <div class="content-title">
-          <div class="users">
-            <img src="./images/MainPage_16.jpg" alt="" class="s" />
-          </div>
-          <div class="general">
-            <div class="name">Assasin's Creed</div>
-            <span><img src="./images/MainPage_18.jpg" alt="" srcset="" /></span>
-            <a href="#">@ass...· 5/19/22</a>
-            <div class="dots">···</div>
-            <div class="text-content">Time to test your loyalty.</div>
-            <div class="tags">
-              <a href="#">#AssasinsCreed</a>
-            </div>
-            <div class="img-content">
-              <img src="./images/MainPage_23.jpg" alt="" srcset="" />
-            </div>
-            <div class="comment">
-              <span class="comments">
-                <img src="./images/MainPage_25.jpg" alt="" srcset="" />
-              </span>
-              <span class="text">1,063</span>
-              <span class="retwitter">
-                <img src="./images/MainPage_27.jpg" alt="" srcset="" />
-              </span>
-              <span class="text">2,782</span>
-              <span class="like">
-                <img src="./images/MainPage_27.jpg" alt="" srcset="" />
-              </span>
-              <span class="text">2,782</span>
-              <span class="share">
-                <img src="./images/MainPage_31.jpg" alt="" srcset="" />
-              </span>
-              <span class="text">2,782</span>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- content -->
-      <div class="content">
-        <div class="content-header">
-          <span><img src="./images/MainPage_13.jpg" alt="" srcset="" /></span>
-          <span class="type">Video games·</span>
-          <a href="#">See more</a>
-        </div>
-        <div class="content-title">
-          <div class="users">
-            <img src="./images/MainPage_16.jpg" alt="" class="s" />
-          </div>
-          <div class="general">
-            <div class="name">Assasin's Creed</div>
-            <span><img src="./images/MainPage_18.jpg" alt="" srcset="" /></span>
-            <a href="#">@ass...· 5/19/22</a>
-            <div class="dots">···</div>
-            <div class="text-content">Time to test your loyalty.</div>
-            <div class="tags">
-              <a href="#">#AssasinsCreed</a>
-            </div>
-            <div class="img-content">
-              <img src="./images/MainPage_23.jpg" alt="" srcset="" />
-            </div>
-            <div class="comment">
-              <span class="comments">
-                <img src="./images/MainPage_25.jpg" alt="" srcset="" />
-              </span>
-              <span class="text">1,063</span>
-              <span class="retwitter">
-                <img src="./images/MainPage_27.jpg" alt="" srcset="" />
-              </span>
-              <span class="text">2,782</span>
-              <span class="like">
-                <img src="./images/MainPage_27.jpg" alt="" srcset="" />
-              </span>
-              <span class="text">2,782</span>
-              <span class="share">
-                <img src="./images/MainPage_31.jpg" alt="" srcset="" />
-              </span>
-              <span class="text">2,782</span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <iframe src="discover.html" frameborder="0" id="main-frame"></iframe>
+    <!-- BottomBar -->
     <div class="bottom-bar">
       <span class="bottom-icon">
-        <img src="./images/icon-01.png" alt="" srcset="" />
+        <img src="./images/active-01.png" alt="" srcset="" />
       </span>
       <span class="bottom-icon">
-        <img src="./images/MainPage_44.jpg" alt="" srcset="" />
+        <img src="./images/inactive-02.png" alt="" srcset="" />
       </span>
       <span class="bottom-icon">
-        <img src="./images/MainPage_47.jpg" alt="" srcset="" />
+        <img src="./images/inactive-03.png" alt="" srcset="" />
       </span>
       <span class="bottom-icon">
-        <img src="./images/notice.png" alt="" srcset="" />
+        <img src="./images/inactive-04.png" alt="" srcset="" />
       </span>
       <span class="bottom-icon">
-        <img src="./images/MainPage_53.jpg" alt="" srcset="" />
+        <img src="./images/inactive-05.png" alt="" srcset="" />
       </span>
     </div>
     <!-- Side-Bar -->
