--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
     </div>
     <!-- Main-content  -->
-    <iframe src="discover.html" frameborder="0" id="main-frame"></iframe>
+    <iframe src="content.html" frameborder="0" id="main-frame"></iframe>
     <!-- BottomBar -->
     <div class="bottom-bar">
       <span class="bottom-icon">
