--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <div class="fllowing">
             <span id="following-num">24</span>Following
           </div>
-          <div class="fllower"><span id="follower-num">0</span>Following</div>
+          <div class="fllower"><span id="follower-num">0</span>Followed</div>
         </div>
       </div>
       <div class="functions">
