--- a/index.html
+++ b/index.html
@@ -8,147 +8,151 @@
   </head>
   <link rel="stylesheet" href="./CSS/main.css" />
   <body>
-    <!-- Top-Bar -->
-    <div class="topbar">
-      <div class="logo">
-        <img src="./images/MainPage_03.jpg" alt="" class="s" />
-      </div>
-      <div class="twitter-logo">
-        <img src="./images/MainPage_06.jpg" alt="" class="s" />
-      </div>
-      <div class="searchbar hidden">
-        <input type="text" placeholder="Search Twitter" id="search" />
-        <span
-          ><img src="./images/images/Discover_06.jpg" alt="" srcset=""
-        /></span>
-      </div>
-      <div class="star">
-        <img src="./images/MainPage_08.jpg" alt="" class="content-top-img" />
-        <img
-          src="./images/images/Discover_03.jpg"
-          alt=""
-          class="discover-top-img hidden"
-        />
-      </div>
-    </div>
-    <!-- Main-content  -->
-    <iframe src="content.html" frameborder="0" id="main-frame"></iframe>
-    <!-- BottomBar -->
-    <div class="bottom-bar">
-      <span class="bottom-icon">
-        <img src="./images/active-01.png" alt="" srcset="" />
-      </span>
-      <span class="bottom-icon">
-        <img src="./images/inactive-02.png" alt="" srcset="" />
-      </span>
-      <span class="bottom-icon">
-        <img src="./images/inactive-03.png" alt="" srcset="" />
-      </span>
-      <span class="bottom-icon">
-        <img src="./images/inactive-04.png" alt="" srcset="" />
-      </span>
-      <span class="bottom-icon">
-        <img src="./images/inactive-05.png" alt="" srcset="" />
-      </span>
-    </div>
-    <!-- Side-Bar -->
-    <div class="side-bar translate">
-      <div class="account">
-        <span class="img-01">
+    <div class="main-container">
+      <!-- Top-Bar -->
+      <div class="topbar">
+        <div class="logo">
+          <img src="./images/MainPage_03.jpg" alt="" class="s" />
+        </div>
+        <div class="twitter-logo">
+          <img src="./images/MainPage_06.jpg" alt="" class="s" />
+        </div>
+        <div class="searchbar hidden">
+          <input type="text" placeholder="Search Twitter" id="search" />
+          <span
+            ><img src="./images/images/Discover_06.jpg" alt="" srcset=""
+          /></span>
+        </div>
+        <div class="star">
+          <img src="./images/MainPage_08.jpg" alt="" class="content-top-img" />
           <img
-            src="./Demo/images/images/images/images/SideBar_01_03.jpg"
+            src="./images/images/Discover_03.jpg"
             alt=""
+            class="discover-top-img hidden"
           />
+        </div>
+      </div>
+      <!-- Main-content  -->
+      <iframe src="content.html" frameborder="0" id="main-frame"></iframe>
+      <!-- BottomBar -->
+      <div class="bottom-bar">
+        <span class="bottom-icon">
+          <img src="./images/active-01.png" alt="" srcset="" />
         </span>
-        <span class="third">
-          <img
-            src="./Demo/images/images/images/images/SideBar_01_07.jpg"
-            alt=""
-            srcset=""
-          />
+        <span class="bottom-icon">
+          <img src="./images/inactive-02.png" alt="" srcset="" />
         </span>
-        <span class="second">
-          <img
-            src="./Demo/images/images/images/images/SideBar_01_05.jpg"
-            alt=""
-            srcset=""
-          />
+        <span class="bottom-icon">
+          <img src="./images/inactive-03.png" alt="" srcset="" />
+        </span>
+        <span class="bottom-icon">
+          <img src="./images/inactive-04.png" alt="" srcset="" />
+        </span>
+        <span class="bottom-icon">
+          <img src="./images/inactive-05.png" alt="" srcset="" />
         </span>
       </div>
-      <div class="info">
-        <div class="name">Rongxin Yang</div>
-        <div class="id">@rongxinyang</div>
-        <div class="fllower">
-          <div class="fllowing">
-            <span id="following-num">24</span>Following
+      <!-- Side-Bar -->
+      <div class="side-bar translate">
+        <div class="account">
+          <span class="img-01">
+            <img
+              src="./Demo/images/images/images/images/SideBar_01_03.jpg"
+              alt=""
+            />
+          </span>
+          <span class="third">
+            <img
+              src="./Demo/images/images/images/images/SideBar_01_07.jpg"
+              alt=""
+              srcset=""
+            />
+          </span>
+          <span class="second">
+            <img
+              src="./Demo/images/images/images/images/SideBar_01_05.jpg"
+              alt=""
+              srcset=""
+            />
+          </span>
+        </div>
+        <div class="info">
+          <div class="name">Rongxin Yang</div>
+          <div class="id">@rongxinyang</div>
+          <div class="fllower">
+            <div class="fllowing">
+              <span id="following-num">24</span>Following
+            </div>
+            <div class="fllower"><span id="follower-num">0</span>Followed</div>
           </div>
-          <div class="fllower"><span id="follower-num">0</span>Followed</div>
         </div>
-      </div>
-      <div class="functions">
-        <div class="function">
-          <img
-            src="./Demo/images/images/images/images/SideBar_01_12.jpg"
-            alt=""
-          />
-          <span>Profile</span>
+        <div class="function-container">
+          <div class="functions">
+            <div class="function">
+              <img
+                src="./Demo/images/images/images/images/SideBar_01_12.jpg"
+                alt=""
+              />
+              <span>Profile</span>
+            </div>
+            <div class="function">
+              <img
+                src="./Demo/images/images/images/images/SideBar_01_15.jpg"
+                alt=""
+              />
+              <span>Lists</span>
+            </div>
+            <div class="function">
+              <img
+                src="./Demo/images/images/images/images/SideBar_01_17.jpg"
+                alt=""
+              />
+              <span>Topics</span>
+            </div>
+            <div class="function">
+              <img
+                src="./Demo/images/images/images/images/SideBar_01_19.jpg"
+                alt=""
+              />
+              <span>Bookmarks</span>
+            </div>
+            <div class="function">
+              <img
+                src="./Demo/images/images/images/images/SideBar_01_21.jpg"
+                alt=""
+              />
+              <span>Moments</span>
+            </div>
+            <div class="function">
+              <img
+                src="./Demo/images/images/images/images/SideBar_01_23.jpg"
+                alt=""
+              />
+              <span>Purchases</span>
+            </div>
+            <div class="function">
+              <img
+                src="./Demo/images/images/images/images/SideBar_01_25.jpg"
+                alt=""
+              />
+              <span>Monetizations</span>
+            </div>
+          </div>
         </div>
-        <div class="function">
-          <img
-            src="./Demo/images/images/images/images/SideBar_01_15.jpg"
-            alt=""
-          />
-          <span>Lists</span>
+        <div class="tools">
+          <span
+            ><img
+              src="./Demo/images/images/images/images/SideBar_01_27.jpg"
+              alt=""
+              srcset=""
+          /></span>
+          <span
+            ><img
+              src="./Demo/images/images/images/images/SideBar_01_28.jpg"
+              alt=""
+              srcset=""
+          /></span>
         </div>
-        <div class="function">
-          <img
-            src="./Demo/images/images/images/images/SideBar_01_17.jpg"
-            alt=""
-          />
-          <span>Topics</span>
-        </div>
-        <div class="function">
-          <img
-            src="./Demo/images/images/images/images/SideBar_01_19.jpg"
-            alt=""
-          />
-          <span>Bookmarks</span>
-        </div>
-        <div class="function">
-          <img
-            src="./Demo/images/images/images/images/SideBar_01_21.jpg"
-            alt=""
-          />
-          <span>Moments</span>
-        </div>
-        <div class="function">
-          <img
-            src="./Demo/images/images/images/images/SideBar_01_23.jpg"
-            alt=""
-          />
-          <span>Purchases</span>
-        </div>
-        <div class="function">
-          <img
-            src="./Demo/images/images/images/images/SideBar_01_25.jpg"
-            alt=""
-          />
-          <span>Monetizations</span>
-        </div>
-      </div>
-      <div class="tools">
-        <span
-          ><img
-            src="./Demo/images/images/images/images/SideBar_01_27.jpg"
-            alt=""
-            srcset=""
-        /></span>
-        <span
-          ><img
-            src="./Demo/images/images/images/images/SideBar_01_28.jpg"
-            alt=""
-            srcset=""
-        /></span>
       </div>
     </div>
   </body>
